<resources>
    <string name="app_name">BreVe</string>

    <!-- Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_header">Register</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="label_button_submit">Submit</string>
    <string name="label_button_login">Login</string>
    <string name="login_header">Login</string>
    <string name="text_sign_up">Sign me up!</string>
    <string name="header_about">About</string>
    <string name="header_posts">Posts</string>
    <string name="header_compose">Compose</string>
    <string name="header_user_home">Home</string>
    <string name="header_profile">Profile</string>
    <string name="hint_user_name">User Name</string>
    <string name="header_account_setting">Account Setting</string>
</resources>
