<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/accountHomeFragment"
        android:title="@string/header_user_home"
        android:icon="@drawable/ic_home_black_24dp"/>
    <item
        android:id="@+id/accountPostsFragment"
        android:title="@string/header_posts"
        android:icon="@drawable/ic_view_list_black_24dp"/>
    <item
        android:id="@+id/accountComposeFragment"
        android:title="@string/header_compose"
        android:icon="@drawable/ic_create_black_24dp"/>
    <item
        android:id="@+id/aboutFragment"
        android:title="@string/header_about"
        android:icon="@drawable/ic_info_outline_black_24dp"/>
</menu>