<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".AccountSettingFragment">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/setting_img"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/setting_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/hint_user_name"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/setting_fName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:inputType="textPersonName"
            android:hint="@string/hint_first_name" />

        <EditText
            android:id="@+id/setting_lName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:inputType="textPersonName"
            android:hint="@string/hint_last_name" />
        <EditText
            android:id="@+id/setting_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email" />

    </LinearLayout>
</layout>